# presto

./: .gitignore  .gitmodules  COMMIT_STRUCTURE.md  CUSTOM_SCHEMAS_README.md  Dockerfile-native  HIVE_INITCAP_IMPLEMENTATION.md  Jenkinsfile  MULTIPLE_NAMESPACE_SUPPORT.md  NATIVE_SIDECAR_MULTIPLE_CATALOGS.md  REMOTE_FUNCTIONS_DESIGN.md  REMOTE_FUNCTIONS_OVERVIEW.md  REVIEWER_GUIDE.md  demo-multiple-catalog-setup.sh  example-multiple-namespaces.properties  pom.xml  verify-namespace-config.sh
.github/: dependabot.yml
.github/workflows/: arrow-flight-tests.yml  codenotify.yml  dependency-review.yml  docs.yml  hive-tests.yml  kudu.yml  maven-checks.yml  owasp-dependency-check.yml  presto-release-prepare.yml  presto-release-publish.yml  prestocpp-format-and-header-check.yml  prestocpp-linux-adapters-build.yml  prestocpp-linux-build-and-unit-test.yml  prestocpp-linux-build.yml  prestocpp-macos-build.yml  product-tests-basic-environment.yml  product-tests-specific-environment.yml  release-notes-check.yml  singlestore-tests.yml  spark-integration.yml  test-other-modules.yml  tests.yml  web-ui-checks.yml
docker/: Dockerfile
presto-accumulo/: pom.xml
presto-benchto-benchmarks/: pom.xml
presto-druid/: pom.xml
presto-elasticsearch/: pom.xml
presto-function-namespace-managers/: pom.xml
presto-function-server/: pom.xml
presto-google-sheets/: pom.xml
presto-iceberg/: pom.xml
presto-kafka/: pom.xml
presto-main/: pom.xml
presto-native-execution/: .dockerignore  .gitignore  CMakeLists.txt  README.md  entrypoint.sh  pom.xml
presto-native-execution/etc/: config.properties
presto-native-execution/etc/function-catalog/: ai.properties  custom.properties  hive.properties  (+1 more)
presto-native-execution/etc_sidecar/: README-multiple-catalogs.md  config.properties  coordinator-multi-catalog-example.txt  multi-catalog-config.properties.example  test-catalog-config.sh  validate-multi-catalog.sh
presto-native-execution/presto_cpp/main/functions/tests/: CMakeLists.txt  FunctionCatalogE2ETest.cpp  FunctionCatalogIntegrationTest.cpp  FunctionCatalogTest.cpp  FunctionMetadataTest.cpp  InitcapFunctionsTest.cpp
presto-native-sidecar-plugin/: pom.xml
presto-native-tests/: pom.xml
presto-server/: pom.xml
presto-spark/: pom.xml
presto-spark-base/: pom.xml
presto-spi/: pom.xml
presto-tests/: pom.xml
(+393 files in other folders)
